--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby--website",
   "private": true,
-  "description": "Gatsby Markdown Website ",
+  "description": "Josphat Mutuku's Blog ",
   "version": "0.1.0",
   "author": "Josphat Mutuku",
   "dependencies": {
@@ -26,10 +26,11 @@
     "gatsby-plugin-tailwindcss": "^1.0.3",
     "gatsby-plugin-typescript": "^2.4.0",
     "gatsby-remark-images": "^3.3.0",
+    "gatsby-remark-mathjax": "^1.0.0",
     "gatsby-remark-prismjs": "^3.5.1",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.0",
-    "gatsby-transformer-remark": "^2.8.8",
+    "gatsby-transformer-remark": "^2.8.9",
     "gatsby-transformer-sharp": "^2.5.0",
     "gh-pages": "^2.2.0",
     "prismjs": "^1.20.0",
@@ -42,6 +43,7 @@
     "tailwindcss": "^1.3.5"
   },
   "devDependencies": {
+    "gatsby-remark-code-titles": "^1.1.0",
     "prettier": "^2.0.5"
   },
   "keywords": [
@@ -52,7 +54,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby clean && build",
     "develop": "gatsby develop",
     "deploy:github": "npm run build && node ./scripts/deploy-github",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
