--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-tailwindcss": "^1.0.3",
     "gatsby-plugin-typescript": "^2.4.0",
     "gatsby-remark-images": "^3.3.0",
+    "gatsby-remark-katex": "^3.3.1",
     "gatsby-remark-mathjax": "^1.0.0",
     "gatsby-remark-prismjs": "^3.5.1",
     "gatsby-remark-relative-images": "^0.3.0",
@@ -33,6 +34,7 @@
     "gatsby-transformer-remark": "^2.8.9",
     "gatsby-transformer-sharp": "^2.5.0",
     "gh-pages": "^2.2.0",
+    "katex": "^0.11.1",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -54,7 +56,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby clean && build",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "deploy:github": "npm run build && node ./scripts/deploy-github",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
