edited dummy text

--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jaymutuku/gatsby-markdown-website"
+    "url": "https://github.com/jaymutuku/jaymutuku.github.io"
   },
   "bugs": {
-    "url": "https://github.com/jaymutuku/gatsby-markdown-website/issues"
+    "url": "https://github.com/jaymutuku/jaymutuku.github.io/issues"
   }
 }
